[gd_scene load_steps=2 format=3 uid="uid://d2xh8q75vbh3r"]

[ext_resource type="Script" uid="uid://cxi252pul17nh" path="res://scenes/character_select/CharacterSelect.gd" id="1_charselect"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_charselect")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Character Selection"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="CharacterListLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Your Characters:"

[node name="CharacterListScroll" type="ScrollContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="CharacterList" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/CharacterListScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CreateCharacterButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Create New Character"

[node name="EnterWorldButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Enter World"

[node name="Spacer2" type="Control" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Loading characters..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="CreateCharacterPopup" type="Window" parent="."]
title = "Create Character"
initial_position = 2
size = Vector2i(400, 300)
visible = false

[node name="MarginContainer" type="MarginContainer" parent="CreateCharacterPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CreateCharacterPopup/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NameLabel" type="Label" parent="CreateCharacterPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Character Name:"

[node name="NameInput" type="LineEdit" parent="CreateCharacterPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter character name"
max_length = 20

[node name="ClassLabel" type="Label" parent="CreateCharacterPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Class:"

[node name="ClassOption" type="OptionButton" parent="CreateCharacterPopup/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="CreateCharacterPopup/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="CreateCharacterPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CancelButton" type="Button" parent="CreateCharacterPopup/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="ConfirmButton" type="Button" parent="CreateCharacterPopup/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create"

[node name="PopupStatusLabel" type="Label" parent="CreateCharacterPopup/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
"
horizontal_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ButtonContainer/CreateCharacterButton" to="." method="_on_create_character_button_pressed"]
[connection signal="pressed" from="CenterContainer/MainPanel/MarginContainer/VBoxContainer/ButtonContainer/EnterWorldButton" to="." method="_on_enter_world_button_pressed"]
[connection signal="pressed" from="CreateCharacterPopup/MarginContainer/VBoxContainer/ButtonContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="CreateCharacterPopup/MarginContainer/VBoxContainer/ButtonContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_completed"]
